--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.1.0",
+    "autoprefixer": "^10.4.7",
     "fs-extra": "^10.1.0",
+    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "jsdoc": "^3.6.10"
+    "jsdoc": "^3.6.10",
+    "tailwindcss": "^3.1.4"
   }
 }
