--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.1.0",
     "autoprefixer": "^10.4.7",
+    "feather-icons": "^4.29.0",
     "fs-extra": "^10.1.0",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
