--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-xarrows": "^2.0.2",
     "tinymce": "^6.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
