--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.1.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "feather-icons": "^4.29.0",
     "fs-extra": "^10.1.0",
@@ -18,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-xarrows": "^2.0.2",
     "tinymce": "^6.0.3",
+    "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/feather-icons": "^4.7.0",
     "jsdoc": "^3.6.10",
     "tailwindcss": "^3.1.4"
   }
