--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "feather-icons": "^4.29.0",
     "fs-extra": "^10.1.0",
     "gatsby-cli": "^4.8.0",
+    "localforage": "^1.10.0",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
