--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bonsai-notes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bonsainotes.com/",
   "dependencies": {
     "@szhsin/react-menu": "^3.1.1",
     "@testing-library/jest-dom": "^5.16.4",
